# SelfwellAgent

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .git-sf1-commit-msg.txt  .git-sf1-log.txt  .git-sf1-stage.js  .git-sf1-status.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  check_bytes.py  check_diag.py  check_imports.py  check_routes.py  docker-compose.yaml  fix-changelog.py  fix_ia_check2.py  fix_plan.py  openapi_snapshot.json  patch_checklist.py  pyproject.toml  pytest.ini  tsconfig.json
.cursor/: hooks.json
.cursor/hooks/: README.md  audit-violations.ps1  guard-shell.cmd  guard-shell.ps1  guard-shell.py  session-inject.ps1  subagent-rules-inject.ps1
.cursor/hooks/tests/: test_guard_shell.py
.cursor/rules/: chinese-doc-utf8-handling.mdc  coding-standards.mdc  ddd-bounded-context.mdc  file-operation-stability.mdc  frontend-standards.mdc  l0-l6-gates.mdc  project-meta.mdc  project-prohibitions.mdc  python-patterns.mdc  rule-navigation.mdc  skills.mdc
.cursor/skills/ad-tdd/: SKILL.md  TDD-WORKFLOW.md  TDS-TEMPLATE.md
.cursor/skills/coding-standards/: EXAMPLES.md  GATES.md  PATTERNS.md  RULES.md  SKILL.md
.cursor/skills/ddd-design/: SKILL.md
.cursor/skills/frontend-standards/: SKILL.md
.cursor/skills/golden-set/: SKILL.md
.cursor/skills/harness-autolearn/: SKILL.md
.cursor/skills/harness-business-interview/: SKILL.md
.cursor/skills/harness-dispatcher/: SKILL.md
.cursor/skills/pr-gate/: SKILL.md
.cursor/skills/pr-gate-ci/: SKILL.md
.cursor/skills/pr-gate-human/: SKILL.md
.cursor/skills/sdd-tdd/: SKILL.md  SPEC-TEMPLATE.md  TDD-WORKFLOW.md
.cursor/specs/: SPEC-V521-PR4-safety-fallback.md
.githooks/: README.md  pre-push.py
.github/scripts/: check_adr.sh  check_atdd.sh
.github/workflows/: backend-ci.yml  harness-ci.yml  pr-gate-LEGACY.md  pr-gate-ci.yml  pr-gate.yml
agents/harness/: DISPATCHER.md  EXECUTORS.md  ORCHESTRATOR.md  REVIEWERS.md
apps/flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
apps/flutter_app/lib/: main.dart
apps/mp-selfwell/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  project.config.json  tsconfig.json  vitest.config.ts
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  conftest.py
backend/alembic/: __init__.py  env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/eval/: README.md  __init__.py  baseline.json  baseline.v1.json  golden_set_v1.yaml  runner.py  test_golden_schema.py
backend/scripts/: check_db.py  check_db2.py  diag_assistant_500_fix.py  flatten_old_reports.py  seed_dev_demo.py  test_ark_api.py  test_assistant_sse.py  test_diagnosis_flow.py  test_multimodal.py  test_mvp_api.py  test_vision_fix.py  test_vision_llm.py  verify_sse_logs.py
backend/tests/: __init__.py  conftest.py  conftest_app.py
client/flutter_app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
client/mp-selfwell/: README.md  project.config.json
client/shared/: README.md  design-tokens.json
db/init/: 00-extensions.sql  01-schema.sql  02-indexes.sql  03-checks.sql  04-triggers.sql  05-verify.sql  06-ddl-update-0707.sql  07-ddl-update-0720.sql  07-table-comments.sql  08_add_assistant_profile_to_ai_sessions.sql  09-v2-ia-tables.sql
docs/PRD/: Selfwell-PRD-V1.0-old-20260717.md  Selfwell-PRD-V1.1.md
docs/adr/: 0007-vision-pipeline-split.md
docs/api/: sse-events.md
docs/audit/: 2026-07-17-scenarios-status-and-gap.md
docs/bugfix/: bugfix-recall-daily-limit-error-message-zh-2026-07-14.md  request-validation-error-no-traceback.md
docs/scenarios/: README-V1.0-old-20260717.md  README.md
docs/spec/: SPEC-M11-vision-pipeline.md  SPEC-M12-timezone-cst-display.md  SPEC-M13-push-scheduler.md  SPEC-M14-compliance.md  SPEC-M5-persona-chat.md  SPEC-M6-plaza-community.md
harness/: ARCHITECTURE-AND-USAGE.md  DEMO-5-TASK-TYPES.md  EVALUATION-PROMPT.md  GAP-ANALYSIS.md  HARNESS-EVALUATION.md  L0-L6-AUDIT-2026-07-19.md  L0-L6-TRUTH.md  MIGRATION-V2.md  P1-to-do.md  README-V2.md  README-V3.md  README.md  THEORY-COMPLETION.md  architecture.md  checklist-future.md  checklist-now.md  checklist.md  docs-tureresource-checkList.md  workflow-v2.yaml  workflow-v3.yaml  workflow.yaml
harness/.archive/: architecture.md
harness/atdd/: ATDD-M1-AC.md  ATDD-M10-AC.md  ATDD-M12-AC.md  ATDD-M13-AC.md  ATDD-M14-AC.md  ATDD-M2-AC.md  ATDD-M3-AC.md  ATDD-M4-AC.md  ATDD-M5-AC.md  ATDD-M6-AC.md  ATDD-M7-AC.md  ATDD-M7-Album-AC.md  ATDD-M8-AC.md  ATDD-PRC-AC.md
harness/context/: 11-security-test.md  12-data-replay.md  13-incident-response.md  14-ops-loop.md  15-skill-update.md  16-interrupt-review.md  phase-checklist.md
harness/evidence/: 01-requirement.md  02-tech-design.md  03-atdd.md  05-plan.md  06-code.md  10-regression.md  11-signoff.md  README.md
harness/issues/: M3-P1-PRD-conflict.md
harness/lessons/: 2026-07-19-c14-pr-gate-is-markdown.md  2026-07-19-powershell-utf8-chinese-corruption.md  2026-07-19-pr-a-replan-redundant.md  2026-07-20-check-phase-windows-compat.md  2026-07-20-rules-direct-edit-corruption.md
harness/scripts/: check.sh  check_phase.py
harness/state/: SNAPSHOT-INSTRUCTIONS.md  harness-state.INIT-20260719.json  harness-state.example.json  harness-state.json  harness-state.schema.md
harness/templates/: acceptance.md  lesson-record.md  pre-mortem.md  synthesis.md
infra/: README.md  start_tailscale_caddy.ps1
infra/caddy/: Caddyfile  README.md  _curl8000.ps1  _inspect.ps1  _test_wx.ps1  _test_wx_direct.ps1
infra/prometheus/: prometheus.yml  rules.yaml
scripts/: verify_ddd_source.py
tools/: check_openapi.py  gen_tabbar_icons.py
tools/seed/: README.md  add_source_column.py  add_source_column_reports.py  run_all.py  seed_add_photo_feedback.py  seed_checkins.py  seed_clear_today_recall.py  seed_clear_user1_feedback.py  seed_clear_user1_feedback_today.py  seed_clear_user1_posts.py  seed_extend_feedback_dates.py  seed_feedback.py  seed_plans.py  seed_posts.py  seed_recall_sessions.py  seed_reset_feedback_dates.py  seed_users.py  seed_videos.py  verify_all.py
(+739 files in other folders)
